adding mail override active

--- a/server/vars.env.example
+++ b/server/vars.env.example
@@ -19,6 +19,7 @@ HASH_SECRET="ThisIsA4UnkyHashAdded"
 TOKEN_EXPIRE="604800"
 TOKEN_SECRET="SuperSecr£tThinGHere"
 
+MAIL_ACTIVE="false"
 MAIL_HOST="api.eu.mailgun.net"
 MAIL_DOMAIN="MAIL DOMAIN HERE"
 MAIL_API="API SECURITY KEY HERE"
