--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "mysql": "^2.18.1",
     "pm2": "^3.5.1",
     "sanitizer": "^0.1.3",
+    "uniqid": "^5.2.0",
     "ws": "^7.1.2"
   },
   "devDependencies": {
