--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,12 @@
   "name": "app-task-tree-server",
   "version": "0.3.0",
   "description": "A simple nodejs task base app",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "production": "pm2 start ./config/pm2.config.js",
-    "start": "nodemon app.js",
-    "dev": "nodemon --ignore test",
-    "test": "jest --watchAll"
+    "production": "NODE_ENV=production pm2 start ./config/pm2.config.js",
+    "start": "NODE_ENV=development nodemon app.js",
+    "dev": "NODE_ENV=development nodemon --ignore test",
+    "test": "NODE_ENV=test mocha"
   },
   "keywords": [
     "base"
@@ -43,7 +43,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^24.9.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.19.1",
     "request": "^2.88.0"
