updating env var loading

--- a/server/vars.typeOfEnv.env.example
+++ b/server/vars.typeOfEnv.env.example
@@ -4,7 +4,8 @@ NODE_ENV="development"
 
 IP="127.0.0.1"
 PORT="8600"
-## misc
+
+RATE_LIMIT_MAX="1500"
 
 DATABASE_URL="localhost"
 DATABASE_PORT="3306"
