wip user test and user logic updates

--- a/server/package.json
+++ b/server/package.json
@@ -48,9 +48,7 @@
     "request": "^2.88.0"
   },
   "jest": {
-    "setupFilesAfterEnv": [
-      "./test/setup.js"
-    ],
+    "setupFilesAfterEnv": [],
     "testEnvironment": "node"
   },
   "eslintConfig": {
