--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcrypt": "^3.0.7",
     "body-parser": "^1.18.3",
+    "connect-history-api-fallback": "^1.6.0",
     "content-filter": "^1.1.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
