--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^3.2.1",
+    "helmet": "^3.23.3",
     "jscs": "^3.0.7",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
