--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "app-task-tree-server",
-  "version": "0.3.0",
+  "name": "app-minitask-server",
+  "version": "0.4.0",
   "description": "A simple nodejs task base app",
   "main": "app.js",
   "scripts": {
