fixed up vars file

--- a/server/vars.typeOfEnv.env.example
+++ b/server/vars.typeOfEnv.env.example
@@ -1,26 +1,29 @@
-NODE_ENV="development"
-# rename this file in order to use as "vars.env"
+# NODE_ENV="production"
 # set node env to production on live server, development otherwise
+
+WEB_NAME="MiniTask"
+WEB_ADDRESS="https://url-of-app-here"
 
 IP="127.0.0.1"
 PORT="8600"
 
-RATE_LIMIT_MAX="1500"
+RATE_LIMIT_MAX="1250"
 
 DATABASE_URL="localhost"
 DATABASE_PORT="3306"
-DATABASE_USER="root"
-DATABASE_PASS="SUPERHARDPASSHERE"
-DATABASE_NAME="DATABASENAMEHERE"
-## misc
+DATABASE_USER="YourUserNameForMysqlHere"
+DATABASE_PASS="BigPasswordHereForDB"
+DATABASE_NAME="DB_NAME_HERE"
 
 SALT_ROUNDS="10"
-HASH_SECRET="ThisIsA4UnkyHashAdded"
+HASH_SECRET="SUPERSECRET"
 
 TOKEN_EXPIRE="604800"
-TOKEN_SECRET="SuperSecr£tThinGHere"
+TOKEN_SECRET="ANOTHERSECRET"
 
-MAIL_ACTIVE="false"
-MAIL_HOST="api.eu.mailgun.net"
-MAIL_DOMAIN="MAIL DOMAIN HERE"
-MAIL_API="API SECURITY KEY HERE"
+MAIL_ACTIVE="true"
+MAIL_HOST="location.mailgun.net"
+MAIL_DOMAIN="mail.your-web-domain.com"
+MAIL_API="key-SUPER_SECRET_KEY_AGAIN"
+
+
