--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
   "author": "kevin flynn",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^3.0.7",
+    "bcrypt": "4.0.0",
     "body-parser": "^1.18.3",
     "connect-history-api-fallback": "^1.6.0",
     "content-filter": "^1.1.2",
