--- a/front/package.json
+++ b/front/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "app-task-tree-front",
-  "version": "0.1.0",
+  "name": "app-minitask",
+  "version": "0.4.5",
   "private": true,
   "scripts": {
     "start": "vue-cli-service serve",
