--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "pm2": "^3.5.1",
+    "pug": "^3.0.0",
     "sanitizer": "^0.1.3",
     "uniqid": "^5.2.0",
     "ws": "^7.1.2"
@@ -45,6 +46,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^26.1.0",
+    "juice": "^7.0.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.19.1",
     "request": "^2.88.0"
