--- a/server2/package.json
+++ b/server2/package.json
@@ -53,6 +53,7 @@
     "helmet": "^3.23.3",
     "knex": "^0.21.5",
     "mysql2": "^2.1.0",
+    "nanoid": "^3.1.12",
     "serve-favicon": "^2.5.0",
     "winston": "^3.3.3"
   },
