--- a/server2/package.json
+++ b/server2/package.json
@@ -46,12 +46,15 @@
     "@feathersjs/feathers": "^4.5.8",
     "@feathersjs/socketio": "^4.5.8",
     "@feathersjs/transport-commons": "^4.5.8",
+    "@hapi/joi": "^17.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "feathers-knex": "^7.1.1",
     "helmet": "^3.23.3",
     "knex": "^0.21.5",
+    "lodash": "^4.17.20",
+    "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "nanoid": "^3.1.12",
     "serve-favicon": "^2.5.0",
