--- a/server2/package.json
+++ b/server2/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "axios": "^0.20.0",
+    "chai": "^4.2.0",
     "eslint": "^7.7.0",
     "mocha": "^8.1.1",
     "nodemon": "^2.0.4"
