--- a/server2/package.json
+++ b/server2/package.json
@@ -54,6 +54,7 @@
     "helmet": "^3.23.3",
     "knex": "^0.21.5",
     "lodash": "^4.17.20",
+    "mailgun-js": "^0.22.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "nanoid": "^3.1.12",
