--- a/server2/package.json
+++ b/server2/package.json
@@ -58,6 +58,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "nanoid": "^3.1.12",
+    "pug": "^3.0.0",
     "serve-favicon": "^2.5.0",
     "winston": "^3.3.3"
   },
@@ -65,6 +66,7 @@
     "axios": "^0.20.0",
     "chai": "^4.2.0",
     "eslint": "^7.7.0",
+    "juice": "^7.0.0",
     "mocha": "^8.1.1",
     "nodemon": "^2.0.4"
   }
