--- a/front2/package.json
+++ b/front2/package.json
@@ -9,8 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "buefy": "^0.9.3",
     "core-js": "^3.6.5",
+    "lodash-es": "^4.17.15",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
