--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "npm": ">= 3.0.0"
   },
   "scripts": {
+    "build_email": "node src/templates/buildMail.js",
     "test": "npm run lint && npm run mocha",
     "lint": "eslint src/. test/. --config .eslintrc.json --fix",
     "dev": "nodemon src/",
