improving API prefix

--- a/server/.env.example
+++ b/server/.env.example
@@ -10,6 +10,8 @@ APP_SECRET="LongSecretHereForFeathersJs"
 
 APP_IP="127.0.0.1"
 APP_PORT="8600"
+# Api/services prefix
+APP_API_PREFIX="/api"
 # Instance Id to avoid env clash when ran via `PM2`
 INSTANCE_ID="1"
 
