--- a/server/package.json
+++ b/server/package.json
@@ -25,11 +25,11 @@
   },
   "scripts": {
     "build_email": "node src/templates/buildMail.js",
-    "test": "npm run lint && npm run mocha",
+    "test": "NODE_ENV=test npm run lint && npm run mocha",
     "lint": "eslint src/. test/. --config .eslintrc.json --fix",
     "dev": "nodemon src/",
     "start": "node src/",
-    "mocha": "mocha test/ --recursive --exit",
+    "mocha": "NODE_ENV=test mocha test/ --recursive --exit",
     "production": "NODE_ENV=production pm2 start ./config/pm2.config.js"
   },
   "standard": {
