--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "lodash-es": "^4.17.15",
     "qs": "^6.9.4",
+    "socket.io-client": "^3.0.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
