--- a/server/package.json
+++ b/server/package.json
@@ -61,6 +61,7 @@
     "mysql2": "^2.1.0",
     "nanoid": "^3.1.12",
     "pug": "^3.0.0",
+    "read-last-lines": "^1.7.2",
     "serve-favicon": "^2.5.0",
     "winston": "^3.3.3"
   },
