--- a/front/package.json
+++ b/front/package.json
@@ -1,10 +1,11 @@
 {
   "name": "front",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build_webpack": "webpack --mode production",
     "build_dev": "NODE_ENV=development vue-cli-service build --mode development",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
@@ -37,7 +38,8 @@
     "sass-loader": "^8.0.2",
     "stylelint": "^13.7.0",
     "stylelint-config-standard": "^20.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-cli": "^4.2.0"
   },
   "eslintConfig": {
     "root": true,
